kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odc-project
  labels:
    name: odc-project
