kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: odc-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: blacksaiyan14/poject-devops-odc-aws:frontend-latest
        ports:
        - containerPort: 5173
        readinessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 40
          periodSeconds: 20
