kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: odc-project
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
